# rocket-welder-sdk

./: .gitignore  CLAUDE.md  PUBLISHING.md  PUBLISHING_GUIDE.md  README.md  build.sh  build_docker_samples.sh  build_examples.sh  manual_publish.sh  publish.sh  run_docker_x11.sh  test-external-controls.sh  test.sh  test_zerofilter.sh  test_zerosink.sh
.github/workflows/: publish-cpp-vcpkg.yml  publish-csharp-nuget.yml  publish-python-pypi.yml  release.yml
cpp/: CMakeLists.txt  CMakeLists_simple.txt  CMakePresets.json  build.sh  build_examples.sh  publish.sh  run.sh  simple_client_test  test.sh  test_build.sh  vcpkg-configuration-example.json  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: rocket-welder-config.cmake.in
cpp/examples/: CMakeLists.txt  simple_client.cpp  simple_client_minimal.cpp
cpp/include/rocket-welder/: client.hpp  connection_string.hpp  gst_caps.hpp
cpp/include/rocket_welder/: client.hpp
cpp/src/: client.cpp
cpp/tests/: CMakeLists.txt  CMakeLists_simple.txt  simple_test.cpp  test_connection_string.cpp  test_gst_caps.cpp
cpp/vcpkg-port/rocket-welder-sdk/: portfile.cmake
cpp/vcpkg/ports/rocket-welder/: portfile.cmake  vcpkg.json
csharp/: .gitignore  README.md  RocketWelder.SDK.csproj  RocketWelder.SDK.sln  ZEROBUFFER_EXCEPTIONS.md  build.sh  build_examples.sh  demo_live_duplex.sh  demo_live_duplex_v2.sh  manual_publish.sh  publish.sh  run.sh  run_docker_x11.sh  test.sh  test_exceptions.cs  test_zerobuffer.sh
csharp/RocketWelder.SDK/: Bytes.cs  ConnectionString.cs  DuplexShmController.cs  EnumExtensions.cs  GstCaps.cs  GstMetadata.cs  MjpegController.cs  OneWayShmController.cs  OpenCvController.cs  Properties.cs  RocketWelder.SDK.csproj  RocketWelderClient.cs  SizeExtensions.cs
csharp/RocketWelder.SDK.Tests/: ConnectionStringTests.cs  EnumExtensionsTests.cs  ExternalControlsSerializationTests.cs  GstMetadataTests.cs  RocketWelder.SDK.Tests.csproj  UiServiceHappyPathTests.cs  UiServiceTests.cs
csharp/RocketWelder.SDK/Properties/: AssemblyInfo.cs
csharp/RocketWelder.SDK/Ui/: ArrowGridControl.cs  Color.cs  ControlBase.cs  ControlId.cs  ControlTypeAttribute.cs  EventProjection.cs  FileName.cs  IItemsControl.cs  IUiControlFactory.cs  IUiService.cs  IconButtonControl.cs  ItemsControl.cs  KeyCode.cs  LabelControl.cs  RegionName.cs  Size.cs  Typography.cs  UiControlFactory.cs  UiService.cs  UiServiceContainerExtensions.cs  UiServiceStarter.cs
csharp/TestExceptions/: Program.cs  TestExceptions.csproj
csharp/examples/SimpleClient/: Dockerfile  Program.cs  SimpleClient.csproj  appsettings.Development.json  appsettings.json
csharp/src/: ConnectionString.cs  GstCaps.cs  RocketWelderClient.cs
python/: DIFF_ANALYSIS.md  SUBSCRIPTION_IMPLEMENTATION.md  build.sh  build_examples.sh  check_buffer.py  check_oieb.py  gst_wrapper.sh  oieb_reader  oieb_reader.cpp  publish.sh  pyproject.toml  requirements.txt  run.sh  run_docker_x11.sh  setup.py  test.sh  test_buffer_timing.sh  test_container_pid.py  test_cross_user_pid.py  test_docker_integration.sh  test_duplex_only.sh  test_integration.sh  test_integration_output.txt  test_mypy_check.py  test_oieb_check.sh  test_opencv_controller.py  test_permission_error.py  test_process_exists.py  test_real_root_pid.py  verify-code-quality.sh
python/examples/: Dockerfile  Dockerfile-python38  advanced_client.py  preview_example.py  simple_client.py  ui_controls_example.py  ui_with_subscription_example.py
python/rocket_welder_sdk/: __init__.py  controllers.py  gst_metadata.py  opencv_controller.py  rocket_welder_client.py
python/tests/: __init__.py  test_controllers.py  test_external_controls_pydantic.py  test_external_controls_serialization.py  test_external_controls_serialization_v2.py  test_gst_metadata.py  test_icons.py  test_ui_controls.py  test_ui_service_happy_path.py
scripts/: GenerateIcons.cs  GenerateIcons.csx
(+33 files in other folders)
